Fix split button border alignment
Jira-ID: I95-11852

--- a/src/components/SplitButton/SplitButton.scss
+++ b/src/components/SplitButton/SplitButton.scss
@@ -22,12 +22,8 @@
     font-family: "Material Design Icons";
     content: "\F140";
     color: $brownish-grey;
-    font-weight: 400;
-    font-size: 26px;
+    font-weight: 600;
+    font-size: 13px;
     vertical-align: middle;
-  }
-
-  .ant-dropdown-trigger {
-    padding: 0 !important;
   }
 }
